--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
         <li> Post Malone </li>
           <li> Travis Scott </li>
     </ul>
-  <img src="https://media.istockphoto.com/id/465355338/photo/travis-scott-performing-in-moscow.jpg?s=612x612&w=0&k=20&c=LkEG3PDf6X39leJXUdF4L1xYzLgLE_BxThj4lhDs89A=" alt="photo of travis scott">
-  <h2> Post Malone's Top 3 Songs (in my opinion) </h2>
+  <figure>
+    <img src="https://media.istockphoto.com/id/465355338/photo/travis-scott-performing-in-moscow.jpg?s=612x612&w=0&k=20&c=LkEG3PDf6X39leJXUdF4L1xYzLgLE_BxThj4lhDs89A=" alt="photo of travis scott">
+  </figure>
+   <h2> Post Malone's Top 3 Songs (in my opinion) </h2>
      <ol> <li> White Inversion </li>
      <li> Hollywood's Bleeding </li>
      <li> Wow. </li>
       </ol>
-  <img src="https://media.istockphoto.com/id/184297768/photo/hip-hop-singer.jpg?s=612x612&w=0&k=20&c=D9laRCx6U1s1ZStQ-bu80DrJngE4Yh2y4NCT6syLlaU=" alt="rapper on stage">
+  <figure>
+    <img src="https://media.istockphoto.com/id/184297768/photo/hip-hop-singer.jpg?s=612x612&w=0&k=20&c=D9laRCx6U1s1ZStQ-bu80DrJngE4Yh2y4NCT6syLlaU=" alt="rapper on stage">
+  </figure>
   <fieldset>
     <legend> <h3> Do you listen to Rap? </h3> </legend>
     <label> <input type="radio" name="DYLTR?" value="Yes"> Yes </label>
