--- a/final/index.html
+++ b/final/index.html
@@ -3,12 +3,18 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width">
-   <title> Reality </title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+   <title></title
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.typekit.net/cnh1uju.css">
+  <link href="Nav.css" rel="stylesheet" type="text/css" />
+  <Link href="styleH.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-<!--Nav Bar Start  -->
+
+
+
+  <!-- Introduction Page about our topic- Introduction -->
+<Body>
+
   <nav class="menu-container">
   <!-- burger menu -->
   <input type="checkbox" aria-label="Toggle menu" />
@@ -17,7 +23,7 @@
   <span></span>
 
   <!-- logo -->
-  <a href="#" class="menu-logo">
+  <a href="index.html" class="menu-logo">
     <img src="img_index/cycle.png" alt="Green Recycling logo "/>
   </a>
 
@@ -25,7 +31,7 @@
   <div class="menu">
     <ul>
       <li>
-        <a href="#home">
+        <a href="index.html">
           Home
         </a>
       </li>
@@ -44,93 +50,70 @@
           Imaginative Recycling
         </a>
       </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="Page4-Marine.htm">
-         Marine Life
-        </a>
-      </li>
-    </ul>
-    <ul>
       <li>
         <a href="Page5-Human.htm">
          The Human Effect
         </a>
       </li>
-    </ul>
-    <ul>
       <li>
         <a href="Page6-Single.htm">
          Single-use Plastic
         </a>
       </li>
-    </ul>
-    <ul>
       <li>
         <a href="Page7-Solutions.htm">
          The Solutions 
         </a>
       </li>
+            <li>
+        <a href="page9-CSUMB.htm">
+         CSUMB Sustainability
+        </a>
+      </li>
+      <li>
+        <a href="Page8-aboutus.htm">
+         About us
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
-
-  <div id="side-cont">
-    <ul>
-      <header> Quick Facts </header>
-      <li class="list"> At least 85% of single use plastics don't get recycled. (Cal Matters) </li> 
-      <li class="list"> In 2015, around 8 million tons of plastic enter our oceans every year. Now in 2023, it is estimated to be 14 million tons. (Whoi) </li>
-      <li class="list"> 500 billion plastic bags are used worldwide. </li>
-      <li class="list"> Over the last 10 years, more plastic has been produces than in the whole last century. </li>
-      <li class="list"> More than 1 million bags are used every minute </li>
-      <li class="list"> An average a plastic bag has a "working life" of 15 minutes. (Plastic Oceans International) </li>
-    </ul>
-  </div>
+  <!-- Nav Bar END -->
 
 
+  <!--Start Of Hero Page  -->
 
+  <!--Section class for our hero page  -->
+  <section class="hero">
+            <div class="hero-inner">
+                <!-- <h1></h1>
+                <h2>Disney Parks</h2>
+                <a href="page1.htm" class="btn">Press Here For Magic!</a> -->
+              <h1> Why Cant We Properly Recycle?</h1>
+              <h1> Web Tools: CST 251 Final Project</h1>
+              <br>
+              <br>
+              <h2> Explore this website to learn more about the misconceptions of recycling and the solutions we need to discuss to help heal our planet.</h2>
+             
+            </div>
+        </section>
   
-<div class="body">
-    <h1> The Reality of Recycling </h1>
-    <p> Recycling is an amazing thing 
-      when it works like we think it does. 
-      However, most times it sin't even 
-      lose to how we think recylcing happens. 
-      Occording to the Smithsonian Ocean, 
-      “out of the millions of tons of plastic 
-      produced each year, only about 5 percent 
-      of it is reclaimed. A large amount of 
-      plastic, about eight million metric 
-      tons every year, ends up in the ocean, 
-      polluting the water and endangering marine
-      life.” This means for every peice of 
-      trash we think we're recycling, 
-      it is most likely going into the ocean.
-      This not only endangers our beloved marine 
-      life but also our selves. These effects are 
-      discussed deeper in other pages. </p>
-
-    <img id="trash" src="img_index/trash_pile.jpeg" alt="trash pile">
+  <footer class="footer">
+		<p class="text-footer">
+			Copyright ©-All rights are reserved
+      <br>
+      CST 251 Final Project
+      <br>
+      May 17, 2023
+      <br>
+      CHLOE CORLISS, ALI KEITH, SARAH PENNINGTON, ALLISON HOWWEL
+		</p>
 
 
-  <div id="stats">
-    <h2> Statistics of Recycling (from The Hill) </h2>
-    <ul>
-      <li> 21% of water and soft drink bottles are recycled. </li>
-      <li> 10% of milk jugs and juice bottles are recycled. </li>
-      <li> Less than 5% of grocery bags and shrink wrap are recycled. </li>
-      <li> Less than 2% of ice cream tubs and coffee pods are recyled.  </li>
-      <li> Less than 1% of plastic cutlery, lids, and DVD cases are recycled. </li>
-    </ul>
-  </div>
-
-  </div>
+	</footer>
   
-  <footer>
-    Pennington, 2023
-  </footer>
-  
+
+
 </body>
-
+    
 </html>
